# seam-carving

./: CMakeLists.txt  README.md
include/: image_processor.hpp
src/: image_processor.cpp  main.cpp
